# artificial-panos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FIXME  Makefile  README.md  TODO  array2D.hh  array2d.hh  artpano.py  auxiliary.hh  canvas.cc  canvas.hh  circ_360.hh  colour.hh  degrad.hh  geometry.cc  geometry.hh  interface.cc  labelgroup.cc  labelgroup.hh  latlon.hh  mapitems.cc  mapitems.hh  pano-rechnen  pano.cc  picture.hh  scene.cc  scene.hh  supp  test-circ.cc  test.cc  test_read_bin.cc  tile.cc  tile.hh  view.hh
cmake/: FindGD.cmake  Findglib.cmake  Findglibmm.cmake  Findlibxml++.cmake  Findsigc++.cmake
code-examples/png/: png-example.cc
dead-code/: Makefile  colour.hh  test-circ.cc
doc/: GD_example.c  heywhatsthat
doc/png/: png-example.cc
examples/: libgd-string.cc
experiments/: .gitignore  Makefile  libgd-test.cc  test_read_bin.cc
gl-test/: .gitignore  Makefile  cube.cc  triangle.cc
mapItems/: peaks-bw.osm  peaks-ch.gpx  peaks-ch.osm  peaks-de.osm  peaks-hd.osm  peaks-no_N.osm  peaks-no_S.osm  peaks-schweiz.gpx  peaks-schweiz.osm  peaks-sk.osm  peaks-sw_S.osm
xml-parse/gpx_parser/: Makefile  conversions.cpp  conversions.h  gpx_parser.cpp  track.cpp  track.h  tracksegment.cpp  tracksegment.h
xml-parse/gpx_parser/experimente_und_beispiele/: Makefile.example  boost_regex.cpp  boost_regex_2.cpp  captures_example.cpp  captures_example_2.cpp  dom_build.cpp  ustring_to_int_example.cpp  xml_dom_example.cpp
